smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/enums/enums.smithy
$version: "2.0"

namespace smithy.example

enum EnumWithoutValueTraits {
    FOO
    BAR
    BAZ
}

enum EnumWithValueTraits {
    @enumValue("foo")
    FOO

    @enumValue("bar")
    BAR

    @enumValue("baz")
    BAZ
}

intEnum IntEnum {
    @enumValue(1)
    FOO

    @enumValue(2)
    BAR

    @enumValue(3)
    BAZ
}
