smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enums/idl-enums-in-v1.smithy
// enum shapes cannot be used in Smithy version 1.0
$version: "1.0"

namespace ns.foo

enum Enum {
    FOO
    BAR
}
